add css n editing html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tugas Akhir XI 2</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Selamat Datang di Ekskul IT!</h1>
+    </header>
+    <nav>
+        <a href="index.html">Beranda</a> |
+        <a href="about.html">Tentang Kami</a> |
+        <a href="gallery.html">Galeri</a>
+    </nav>
+    <section>
+        <p>Ekskul IT membahas pemrograman, robotik, dan teknologi terkini.</p>
+    </section>
 </body>
 </html>
